src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount of Financial Security</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Expiry Date</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FS_Currency__c</fullName>
        <label>FS Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Center_Currency_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Institution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Institution</label>
        <referenceTo>Financial_Institution__c</referenceTo>
        <relationshipLabel>Financial Institutions</relationshipLabel>
        <relationshipName>FinancialSecurities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Security__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Security</label>
        <referenceTo>Financial_Security__c</referenceTo>
        <relationshipLabel>Financial Security</relationshipLabel>
        <relationshipName>Staging_Financial_Security</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LineItemID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LineItemID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSCAR_GDI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OSCAR_GDI</label>
        <referenceTo>AMS_OSCAR__c</referenceTo>
        <relationshipLabel>Financial Security Staging</relationshipLabel>
        <relationshipName>OscarGDI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Power_of_one__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of one</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>SARA</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Application</fullName>
                </value>
                <value>
                    <fullName>ACC change</fullName>
                </value>
                <value>
                    <fullName>Financial Review</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Previous Security Update</fullName>
                </value>
                <value>
                    <fullName>Irregularities</fullName>
                </value>
                <value>
                    <fullName>CASS Associate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reception_Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reception Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Staging Financial Security</relationshipLabel>
        <relationshipName>FinancialSecurityStaging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reception_Date__c</fullName>
        <description>SARA</description>
        <label>Reception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Financial Security Region</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Africa &amp; Middle East</fullName>
                </value>
                <value>
                    <fullName>Asia &amp; Pacific</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>China &amp; North Asia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SP_Area_Summary1__c</fullName>
        <label>SP-Area-Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security_Status__c</fullName>
        <label>Security Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Close to Expiry Date</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Encashed</fullName>
                </value>
                <value>
                    <fullName>Not Active yet</fullName>
                </value>
                <value>
                    <fullName>Encashment in progress</fullName>
                </value>
                <value>
                    <fullName>Inactive_Addendum</fullName>
                </value>
                <value>
                    <fullName>Pending to be Released</fullName>
                </value>
                <value>
                    <fullName>Pending Validation</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Type__c</fullName>
        <description>Type of Financial Security Requested</description>
        <label>Security Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank Guarantee</fullName>
                </value>
                <value>
                    <fullName>CCG</fullName>
                </value>
                <value>
                    <fullName>Cross Border Guarantee</fullName>
                </value>
                <value>
                    <fullName>CWA Mutual Fund</fullName>
                </value>
                <value>
                    <fullName>DIP</fullName>
                </value>
                <value>
                    <fullName>Financial Guarantee</fullName>
                </value>
                <value>
                    <fullName>GDI</fullName>
                </value>
                <value>
                    <fullName>Hong Kong Trust Fund</fullName>
                </value>
                <value>
                    <fullName>Insurance Bond</fullName>
                </value>
                <value>
                    <fullName>Ireland Trust Fund</fullName>
                </value>
                <value>
                    <fullName>Joint Bank Guarantee (India)</fullName>
                </value>
                <value>
                    <fullName>Letter Of Credit</fullName>
                </value>
                <value>
                    <fullName>Letter Of Undertaking</fullName>
                </value>
                <value>
                    <fullName>Manifestacion de Bienes</fullName>
                </value>
                <value>
                    <fullName>MCBG</fullName>
                </value>
                <value>
                    <fullName>MCPG</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>OTOC</fullName>
                </value>
                <value>
                    <fullName>Parent Company Guarantee</fullName>
                </value>
                <value>
                    <fullName>Recapitalization</fullName>
                </value>
                <value>
                    <fullName>Standby Letter Of Credit</fullName>
                </value>
                <value>
                    <fullName>Statement Of Assignment</fullName>
                </value>
                <value>
                    <fullName>Surety Bond</fullName>
                </value>
                <value>
                    <fullName>TAANZ Bonding Scheme</fullName>
                </value>
                <value>
                    <fullName>Time Deposit</fullName>
                </value>
                <value>
                    <fullName>Time Deposit Pledge</fullName>
                </value>
                <value>
                    <fullName>Transit Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceId__c</fullName>
        <label>SourceId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validity_Start_Date__c</fullName>
        <description>Date as from when the financial security is valid</description>
        <label>Validity Start Date</label>
        <type>Date</type>
    </fields>
    <validationRules>
        <fullName>Item_Locked_for_Closed_or_Submitted_Opp</fullName>
        <active>true</active>
        <description>Lock the Opp Product  / Opp Line Item for everybody except the product manager, after the opportunity has been sent for validation or has been closed.</description>
        <errorConditionFormula>AND (
  Opportunity.RecordType.DeveloperName = &apos;RCRM_Opportunity&apos;,
  OR (
    TEXT(  Opportunity.RCRM_Validation_Status__c  ) = &apos;Sent to PM for validation&apos;,
    Opportunity.IsClosed
  ),
  $Profile.Name &lt;&gt; &apos;MACS - Product&apos;
)</errorConditionFormula>
        <errorDisplayField>ServiceDate</errorDisplayField>
        <errorMessage>You can no longer edit the Products on an Opportunity that has been sent for validation or closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Family_set_by_RCRM_Opportunity</fullName>
        <active>true</active>
        <description>For RCRM Opportunities and RCRM Products, the product family of the added products needs to match the one selected on the Opportunity.</description>
        <errorConditionFormula>AND (
  Opportunity.RecordType.DeveloperName = &apos;RCRM_Opportunity&apos;,
  Product2.RCRM_Product__c = true,
  TEXT( Product2.Family ) &lt;&gt; TEXT( Opportunity.Product_Family__c )
)</errorConditionFormula>
        <errorMessage>The Products added to the Opportunity need to come from the Product Family selected on the Opportunity.</errorMessage>
    </validationRules>
</CustomObject>